# TC_1.1.5_calculator

./: Dockerfile  README.md  pyproject.toml
calculator/: __init__.py  calculator.py  test__init__.py  test_calculator.py
