[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "calculator"
authors = [{name = "Adomas Vysniauskas", email = "adomasofm@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/punkuotukas/TC_1.1.5_calculator"
